--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* fonts.css */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900;1000&display=swap');
 
 @tailwind base;
 @tailwind components;
